# personal-task-board

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: main.py  state.py
app/ui/: board_view.py  card_widget.py  column_widget.py  main_window.py  project_widget.py  projects_pane.py
src/: boardview.cpp  boardview.h  cardwidget.cpp  cardwidget.h  columnwidget.cpp  columnwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  theme.h
src/model/: appstate.cpp  appstate.h  markdownio.cpp  markdownio.h  types.h
tests/: CMakeLists.txt  test_appstate.cpp  test_markdownio.cpp
